[package]
name = "gist_22"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.226", default-features = false, features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
